deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: code-review
  labels:
    name: code-review
    environment: production
